fix(time-picker): adjust select input spacing

--- a/src/components/time-picker/_time-picker.scss
+++ b/src/components/time-picker/_time-picker.scss
@@ -131,6 +131,7 @@
   .#{$prefix}--time-picker .#{$prefix}--select-input {
     min-width: auto;
     width: auto;
+    padding-right: rem(48px);
     line-height: 1;
   }
 
